<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="com.example.hassan.footquiz.MainActivity"
    android:background="#fff">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:weightSum="100"
        android:background="#303030"
        android:id="@+id/linearLayout">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="25"
            android:weightSum="100"
            android:background="#a1a1a1" >

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="25"
                android:weightSum="100">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="Welcome       : "
                    android:id="@+id/txtWelcome"
                    android:textSize="24sp"
                    android:layout_weight="50"
                    android:background="#34495e"
                    android:textColor="#1abc9c"
                    android:gravity="center|center_horizontal" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/txtWelcomeUser"
                    android:textSize="24sp"
                    android:gravity="center|center_horizontal"
                    android:layout_weight="50"
                    android:background="#34495e"
                    android:textColor="#1abc9c" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="25"
                android:weightSum="100" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="your score is : "
                    android:id="@+id/txtScore"
                    android:textSize="24sp"
                    android:layout_weight="50"
                    android:background="#34495e"
                    android:textColor="#1abc9c"
                    android:gravity="center_horizontal" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/txtScoreUser"
                    android:textSize="24sp"
                    android:gravity="center_horizontal"
                    android:layout_weight="50"
                    android:background="#34495e"
                    android:textColor="#1abc9c" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/imageView7"
                android:src="@drawable/roundedline"
                android:scaleType="fitXY"
                android:layout_weight="50" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50"
            android:background="#3498db">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="34"
                android:weightSum="100"
                android:baselineAligned="false">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2" >

                    <Space
                        android:layout_width="20dp"
                        android:layout_height="20dp" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="47"
                    android:weightSum="100"
                    android:id="@+id/lcoach"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:weightSum="100"
                        android:layout_weight="100"
                        android:id="@+id/coach">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:id="@+id/icoach"
                            android:layout_weight="80"
                            android:src="@drawable/coach"
                            android:background="@drawable/rectangle"
                            android:contentDescription="@string/Coach" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/Coach"
                            android:id="@+id/tcoach"
                            android:layout_weight="20"
                            android:background="#34495e"
                            android:gravity="center"
                            android:textColor="#1abc9c" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2" >

                    <Space
                        android:layout_width="20dp"
                        android:layout_height="20dp" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="47"
                    android:weightSum="100"
                    android:id="@+id/lplayer"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:weightSum="100"
                        android:layout_weight="100">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:id="@+id/iplayer"
                            android:layout_weight="80"
                            android:src="@drawable/player"
                            android:background="@drawable/rectangle"
                            android:contentDescription="@string/Players" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/Players"
                            android:id="@+id/tplayer"
                            android:layout_weight="20"
                            android:background="#34495e"
                            android:gravity="center"
                            android:textColor="#1abc9c" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2" >

                    <Space
                        android:layout_width="20dp"
                        android:layout_height="20dp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <Space
                    android:layout_width="20dp"
                    android:layout_height="20dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" >

                <Space
                    android:layout_width="20dp"
                    android:layout_height="20dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="34"
                android:weightSum="100"
                android:baselineAligned="false">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2" >

                    <Space
                        android:layout_width="20dp"
                        android:layout_height="20dp" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="47"
                    android:weightSum="100"
                    android:id="@+id/linternational" >

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:weightSum="100"
                        android:layout_weight="100"
                        android:id="@+id/linearLayout2" >

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:id="@+id/international"
                            android:layout_weight="80"
                            android:src="@drawable/international"
                            android:background="#FFFFFF"
                            android:contentDescription="@string/interNational" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/interNational"
                            android:id="@+id/tinternational"
                            android:layout_weight="20"
                            android:background="#34495e"
                            android:gravity="center"
                            android:textColor="#1abc9c" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2" >

                    <Space
                        android:layout_width="20dp"
                        android:layout_height="20dp" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="47"
                    android:weightSum="100"
                    android:id="@+id/lnational"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:weightSum="100"
                        android:layout_weight="100" >

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:id="@+id/national"
                            android:layout_weight="80"
                            android:src="@drawable/national"
                            android:background="#FFFFFF"
                            android:contentDescription="@string/National" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/National"
                            android:id="@+id/tnational"
                            android:layout_weight="20"
                            android:background="#34495e"
                            android:gravity="center"
                            android:textColor="#1abc9c" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2" >

                    <Space
                        android:layout_width="20dp"
                        android:layout_height="20dp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="25"
            android:weightSum="100"
            android:background="#a1a1a1" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/imageView8"
                android:src="@drawable/roundedlinerotation"
                android:scaleType="fitXY"
                android:layout_weight="50" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="ADS"
                android:id="@+id/textView10"
                android:textSize="30sp"
                android:gravity="center"
                android:layout_weight="50"
                android:background="#34495e"
                android:textColor="#1abc9c" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
